# orpo-llama-8b

./: .gitignore  Dockerfile  README.md  constraints.txt  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.sh
src/lama_orpo/: flash.py  main.py  orpo.py  upload_hf.py
tests/: Docker
