[project]
name = "lama-orpo"
version = "0.1.0"
description = ""
authors = [
    {name = "spass",email = "168576652+sp4s-s@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "lama_orpo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
